--- a/src/lasdonas.html
+++ b/src/lasdonas.html
@@ -29,7 +29,6 @@
                 <li><a>Categoría 7</a></li>
             </ul>
         </nav>
-
     </div>
     <header>
         <div class="header_top bg-rosalasdonas w-full h-12 text-white flex flex-row items-center justify-center"> Producto | Categoría <span class="ml-1 font-bold">  más vendida </span> <img class="w-6 ml-2" src="../resource/img_donas/spa.svg"></div>    
@@ -58,9 +57,11 @@
                     </div>
                 </div>
             </div>
+
             <div class="block_center col-span-6 flex items-center justify-center ">
                 <img class="w-48" src="../resource/img_donas/logo_lasdonas.svg"/>
             </div>
+            
             <div class="block_right col-span-3 flex flex-row items-center justify-center pl-2 ">
                 
                 <div class="bg-rosalasdonas rounded-full p-2 mr-6 hidden md:block">
@@ -109,10 +110,12 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
 
                 <div class="space-y-2 max-w-96 m-auto">
-                    <img class="w-96 h-96 object-contain" src="../resource/img_donas/productolasdonas.png"/>
-                    <h2 class="text-xl font-bold text-black">Ramo Primaveral</h2>
-                    <p class="text-base font-normal text-black">Estallido de colores primaverales. Ideal para alegrar el día.</p>
-                    <div class="flex font-medium"><p>S/ <span>75.00</span></p><p class="px-2">-</p><p>S/ <span>120.00</span></p></div>
+                    <a href="www.google.com" target="_blank">
+                        <img class="w-96 h-96 object-contain" src="../resource/img_donas/productolasdonas.png"/>
+                        <h2 class="text-xl font-bold text-black">Ramo Primaveral</h2>
+                        <p class="text-base font-normal text-black">Estallido de colores primaverales. Ideal para alegrar el día.</p>
+                        <div class="flex font-medium"><p>S/ <span>75.00</span></p><p class="px-2">-</p><p>S/ <span>120.00</span></p></div>
+                    </a>    
                     <button type="button"   class="w-full  py-3 rounded-lg shadow-md font-medium flex items-center justify-center">Agregar a mi bolsa <img class="ml-2" src="../resource/img_donas/addcart.svg"/></input>
                 </div>
 
